--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,25 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = ["flit_core >= 3.12.0, <4"]
 build-backend = "flit_core.buildapi"
 
 [project]
 name = "litex_kernel"
+version = "0.1.5 - beta"
 authors = [
-    {name = "Hill Hong", email = "scanfandprintf@icloud.com"},
+  {name = "Hill Hong", email = "scanfandprintf@icloud.com"},
 ]
-readme = "README.rst"
-dependencies = ["pexpect (>=4.0)", "ipykernel"]
+description = "A Jupyter kernel for LiteX"
+readme = "README.md"
+requires-python = ">=3.9"
 classifiers = [
     "Framework :: Jupyter",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Topic :: System :: Litex",
 ]
-dynamic = ["version", "description"]
+license = "MIT"
+license-files = ["LICEN[CS]E*"]
 
 [project.urls]
-Source = "https://github.com/litexlang/litex_kernel"
+Homepage = "https://github.com/litexlang/litex_kernel"
+Issues = "https://github.com/litexlang/litex_kernel/issues"
