--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "litex_kernel"
-version = "0.1.5 - beta"
+version = "0.1.5.beta"
 authors = [
   {name = "Hill Hong", email = "scanfandprintf@icloud.com"},
 ]
@@ -13,7 +13,6 @@ readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
     "Framework :: Jupyter",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Topic :: System :: Litex",
 ]
