--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "litex_kernel"
-version = "0.1.6.beta"
+version = "0.1.0.beta"
 authors = [
   {name = "Hill Hong", email = "scanfandprintf@icloud.com"},
 ]
-description = "A Jupyter kernel for LiteX"
+description = "A Jupyter kernel for Litex core"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
