--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "litex_kernel"
-version = "0.1.0.beta"
+version = "0.1.1"
 authors = [
   {name = "Hill Hong", email = "scanfandprintf@icloud.com"},
 ]
@@ -14,6 +14,8 @@ requires-python = ">=3.9"
 classifiers = [
     "Framework :: Jupyter",
     "Programming Language :: Python :: 3",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering :: Mathematics",
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
