--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "litex_kernel"
-version = "0.1.9.beta"
+version = "1.0.0"
 authors = [
   {name = "Hill Hong", email = "scanfandprintf@icloud.com"},
 ]
